[project]
name = "ml-model-hyperparameter-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "SkyShineTH",email = "oat606606oat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "scikit-optimize (>=0.10.2,<0.11.0)",
    "bayesian-optimization (>=3.1.0,<4.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.18.1"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
isort = "^6.0.1"
jupyter = "^1.1.1"

